# swift-lifecycle-management

./: README  README.md  requirements.txt  setup.cfg  setup.py
common/: lifecycle.py
daemon/: expirer.py  transitior.py
debian/: changelog  control  rules  s3-lifecycle-propagator.conf  s3-object-expirer.conf  s3-object-restorer.conf  s3-object-transitor.conf  s3-restored-object-expirer.conf  swift-s3-lifecycle-propagator.install  swift-s3-lifecycle-propagator.upstart  swift-s3-object-expirer.install  swift-s3-object-expirer.upstart  swift-s3-object-restorer.install  swift-s3-object-restorer.upstart  swift-s3-object-transitor.install  swift-s3-object-transitor.upstart  swift-s3-restored-object-expirer.install  swift-s3-restored-object-expirer.upstart
lifecycle-middleware/: README.md  setup.py
lifecycle-middleware/lifecycle/: exceptions.py  middleware.py  utils.py
middleware/: __init__.py
middleware/lifecycle/: middleware.py  utils.py
swiftlifecyclemanagement/common/: lifecycle.py  utils.py
swiftlifecyclemanagement/conf/: s3-lifecycle-propagator.conf  s3-object-expirer.conf  s3-object-restorer.conf  s3-object-transitor.conf  s3-restored-object-expirer.conf
swiftlifecyclemanagement/daemon/: expirer.py  lifecycle_propagator.py  restoredexpirer.py  restorer.py  transitor.py
swiftlifecyclemanagement/middleware/lifecycle/: middleware.py  utils.py
swiftlifecyclemanagement/middleware/restorer/: middleware.py
transition-middleware/: setup.py
transition-middleware/transition/: middleware.py
truncate-middleware/: setup.py
(+4 files in other folders)
