[metadata]
name = swiftlifecyclemanagement

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    swiftlifecyclemanagement
scripts =
    bin/swift-s3-lifecycle-propagator
    bin/swift-s3-object-expirer
    bin/swift-s3-object-transitor
    bin/swift-s3-object-restorer
    bin/swift-s3-restored-object-expirer

[entry_points]
paste.filter_factory =
    swiftlifecyclemanagement = swiftlifecyclemanagement.middleware.lifecycle.middleware:filter_factory
    swiftobjecttransiton = swiftlifecyclemanagement.middleware.transition.middleware:filter_factory
    swiftobjectrestore = swiftlifecyclemanagement.middleware.restorer.middleware:filter_factory
    swiftobjecttruncate = swiftlifecyclemanagement.middleware.truncate.middleware:filter_factory
